--- a/project/resources/css/app.css
+++ b/project/resources/css/app.css
@@ -71,3 +71,8 @@ body {
         transform: translate(5%, 0)
     }
 }
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0px 1000px transparent inset !important;
+    -webkit-text-fill-color: white !important;
+    transition: background-color 5000s ease-in-out 0s;
+}
