--- a/project/resources/css/app.css
+++ b/project/resources/css/app.css
@@ -76,3 +76,6 @@ input:-webkit-autofill {
     -webkit-text-fill-color: white !important;
     transition: background-color 5000s ease-in-out 0s;
 }
+input[type="date"]::-webkit-calendar-picker-indicator {
+    display: none;
+}
